# FlexAID

./: .gitignore  CMakeLists.txt  README.md  VERSION
FlexAID_Xcode/FlexAID_Xcode.xcodeproj/: francis.mode1v3  francis.pbxuser  project.pbxproj
LIB/: BindingMode.cpp  BindingMode.h  ColonyEnergy.cpp  ColonyEnergy.h  DensityPeak_Cluster.c  Entropy_cluster.c  FOPTICS.cpp  FOPTICS.h  FOPTICS_cluster.c  FastOPTICS_cluster.c  FastOPTICS_cluster.cpp  Vcontacts.c  Vcontacts.cpp  Vcontacts.h  add2_optimiz_vec.c  add2_optimiz_vec.cpp  alter_mode.cpp  assign_constraint.c  assign_constraint.cpp  assign_constraint_threshold.c  assign_eigen.c  assign_eigen.cpp  assign_radii.c  assign_radii.cpp  assign_radii_types.c  assign_radii_types.cpp  assign_radius.cpp  assign_shift.c  assign_shift.cpp  assign_shortflex.c  assign_shortflex.cpp  assign_types.c  assign_types.cpp  boinc.c  boinc.h  bondedlist.cpp  build_close.c  build_rotamers.c  buildcc.c  buildcc_point.cpp  (+80 more)
WRK/: AMINO.def  AMINO12.def  AMINO26.def  AMINO8.def  NUCLEOTIDES12.def  NUCLEOTIDES26.def  NUCLEOTIDES8.def  rotobs.lst
WRK/1STP/: BTN.ic  BTN.inp  CONFIG.inp
